# geocat-datafiles

./: .gitignore  CITATION.cff  CITATION.md  CONTRIBUTING.md  INSTALLATION.md  MANIFEST.in  README.md  create_registry.py  meta.yaml  pyproject.toml  registry.txt  requirements.txt  setup.py
.github/: dependabot.yml
applications_files/: README.md
ascii_files/: 2004021700.balt  2009022800_001_KSGF_raob.txt  2009022800_002_KBUF_raob.txt  2009022800_004_KALB_raob.txt  2009022800_006_KOKX_raob.txt  2009022800_metar.txt  2009022800_pirep.txt  2009022800_sites.txt  479615.NorthDakota.csv  479615.latlon.csv  CO-OPS_9415020_wl.csv  L3_aiavg_n7t_197901.txt  TA_Globe.1850-2014.txt  USPresident_Wikipedia_URLs_Thmbs_HW.csv  annotate5.txt  asc4.txt  asc5.txt  barb1.txt  barb2.txt  barb3.txt  best_all_2003.inp  co2_R.txt  cygnss_test.txt  data.asc  dummy_model_data.txt  eoftest.davis_data  estados_brasil.tar  example1.csv  example2.csv  example3.csv  geyser_R.txt  ipoind_8yrTrend.asc  istasyontablosu_son.txt  jones_glob_ann_2002.asc  law_school_15.txt  law_school_82.txt  palmer_table1.txt  regress_1.txt  rmacc.csv  rutgers.snow_cover_extent.time_series.txt  (+7 more)
build_envs/: environment.yml
grib_files/: 200801141715_CV-CEIL.grb2  ST4.2002030112.06h.grb  flxf2006040100.grb  z_tigge_c_egrr_20061028120000_0000_pt_glob_prod.grib2
hdf_files/: A803sn1d.hdf
netcdf_files/: 1994_256_FSD.nc  80.nc  83.nc  ANN_MEAN.nc  AmpHar2.nc  Boulder.precip.1897-2014.nc  Boulder.temp.1897-2014.nc  ECMWF_ZM_REGIONS_OMEGA_V2.nc  IPCC_multipanel_shift_plot_all_models_zonav_simple_input.nc  Jsst.nc  MPAS.nc  (+67 more)
(+32 files in other folders)
