[project]
name = "geocat.datafiles"
authors = [{ name = "GeoCAT Team", email = "geocat@ucar.edu" }]
classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
description = "GeoCAT-datafiles hosts data files used by other GeoCAT packages to test or demonstrate functionality"
dynamic = ["version"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pooch"]

[project.urls]
issue-tracker = "https://github.com/NCAR/geocat-datafiles/issues"
source-code = "https://github.com/NCAR/geocat-datafiles"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools-scm>=8",
]

[tool.setuptools.packages.find]
include = ["geocat.*"]

[tool.setuptools_scm]
fallback_version = "9999"
